# DoAPizza

backend/: .env.example  .gitignore  Dockerfile  README.md  api_integration.md  docker-compose.yml  init_data.sql  requirements.txt
backend/app/: manage.py
backend/app/administration/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/app/administration/migrations/: 0001_initial.py
backend/app/doapizza/: .env.example  asgi.py  settings.py  urls.py  wsgi.py
backend/app/orders/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/app/restaurant/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json
frontend/src/: index.css
frontend/src/app/: providers.jsx  routes.jsx
nlp-service/: .env  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
nlp-service/src/nlp_service/: __init__.py  app.py  catalog_runtime.py  catalog_sync.py  config.py  llm.py  logging.py  parser.py  schemas.py  state_machine.py
nlp-service/tests/: test_catalog_sync.py  test_config.py  test_health.py  test_parse.py
tgbot/: .env.example  .gitignore  PRODUCT_SPEC.md  README.md  main.py  pyproject.toml
tgbot/src/tgbot/: __init__.py  bot.py  catalog.py  catalog_sync.py  config.py  logging.py  nlp_client.py  order_service.py  schemas.py  session_store.py  telegram_api.py
tgbot/src/tgbot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tgbot/tests/: test_catalog_sync.py  test_config.py  test_nlp_client.py  test_order_service.py
(+60 files in other folders)
