[project]
name = "tgbot"
version = "0.1.0"
description = "Telegram bot service for pizza ordering via the NLP module"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.10.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
